Fix inline-follower-suggestion source overflow

--- a/app/javascript/styles/mastodon/components.scss
+++ b/app/javascript/styles/mastodon/components.scss
@@ -10679,6 +10679,7 @@ noscript {
           &__source {
             display: inline-flex;
             align-items: center;
+            max-width: 100%;
             color: var(--color-text-tertiary);
             gap: 4px;
             overflow: hidden;
